# ufsjedi-bundle

./: .gitignore  CMakeLists.txt  PRs.txt  README  README.md  TMP_README_UFS_STANDALONE.sh  patches.tar  setup-c48.sh
.github/workflows/: run_ec2_pcluster.yaml  ubuntu-ci-x86_64.yaml
patches/: checksum.patch  mom6.patch  ng-godas.patch  ufs-wm.patch
